--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
-  http:
+  http: ^0.12.0+2
+  flutter_markdown: ^0.2.0
+  timeago: ^2.0.20
 
 dev_dependencies:
   flutter_test:
