--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   http: ^0.12.0+2
   flutter_markdown: ^0.2.0
   timeago: ^2.0.20
+  url_launcher: ^5.2.0
 
 dev_dependencies:
   flutter_test:
