--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_markdown: ^0.2.0
   timeago: ^2.0.20
   url_launcher: ^5.2.0
+  provider: ^3.0.0
 
 dev_dependencies:
   flutter_test:
