--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   timeago: ^2.0.20
   url_launcher: ^5.2.0
   provider: ^3.0.0
+  enum_to_string: ^1.0.7
 
 dev_dependencies:
   flutter_test:
