--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   provider: ^3.0.0
   enum_to_string: ^1.0.7
   share: ^0.6.2+4
+  sqflite: ^1.1.7+1
+  path: ^1.6.4
 
 dev_dependencies:
   flutter_test:
